--- a/style.css
+++ b/style.css
@@ -18,3 +18,62 @@ body {
   padding: 50px;
   border-radius: 10px;
 }
+
+input,
+select {
+  padding: 10px;
+  border-radius: 10px;
+  border: 1px solid #000;
+}
+
+.container {
+  background-color: rgb(250, 250, 250);
+  box-shadow: 0px 5px 20px #000;
+  padding: 50px;
+  border-radius: 10px;
+}
+.title {
+  margin-bottom: 20px;
+  text-align: center;
+}
+.description {
+  margin-bottom: 30px;
+}
+.exchange {
+  display: flex;
+  justify-content: space-between;
+}
+.amount-wrapper {
+  display: flex;
+  justify-content: center;
+}
+.amount {
+  width: 30%;
+  padding: 10px;
+  margin-bottom: 30px;
+  text-align: center;
+  font-size: 24px;
+}
+.exchange {
+  margin-bottom: 30px;
+}
+.result {
+  text-align: center;
+}
+
+.exchange_swap-btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
+  border: 1px solid #000;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+/* hide arrows in number input  */
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
